# mygeopy

./: .gitignore  README.md  pyproject.toml  triangle.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
mygeopy/: triangle.py
tests/: test_triangle.py
