[build-system]
requires = [
  "setuptools>=67",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mygeopy"
version = "0.1.0"
description = "Simple geometry utilities for testing"
requires-python = ">=3.8"
authors = [
  { name = "Your Name" }
]
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[tool.setuptools]
packages = ["mygeopy"]


[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]